<resources>
    <string name="app_name">LESON</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginTittle">Login</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="btnLoginText">Login</string>
    <string name="errorFieldKosong">Harap isi field ini terlebih dahulu</string>
    <string name="errorUserNotFound">Email tidak ditemukan</string>
    <string name="MenuDaftarKelas">Daftar Kelas</string>
    <string name="MenuDaftarRekaman">Daftar Rekaman</string>
    <string name="MenuUtama">Observasi</string>
    <string name="MenuAkun">Akun</string>
    <string name="MenuSetting">Setting</string>
    <string name="textBtnLogout">Logout</string>
    <string name="text_btnmulairekamhome">Let\'s Start</string>
    <string name="heading1_home">Mari Mulai !</string>
    <string name="heading2_home">Mulai proses observasi dengan menekan tombol ini</string>
    <string name="text_btnlogout">Logout</string>
    <string name="errorPasswordSalah">password salah, silahkan periksa kembali</string>
    <string name="errorPaswordTidaksama">Password harus sama</string>
    <string name="DataKelas">Tambah Kelas</string>
    <string name="btn_simpanDenah">Simpan Denah Kelas</string>
    <string name="kepanjangan_leson">Lesson Study Observation Note</string>
    <string-array name="modelKelasArray">
        <item>Pilih Denah Kelas</item>
        <item>Group Discussion</item>
        <item>Classroom</item>
        <!--        <item>U-Shape</item>-->
    </string-array>
    <string-array name="tipe_kegiatan">
        <item>Pilih Kegiatan</item>
        <item>Siswa bertanya</item>
        <item>Siswa Izin</item>
        <item>Siswa Presentasi</item>
        <item>Siswa Menjawav</item>
    </string-array>
</resources>
