<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/daftarKelasFragment"
        android:icon="@drawable/ic_classroom"
        android:title="@string/MenuDaftarKelas"/>

    <item
        android:id="@+id/daftarRekamanFragment"
        android:icon="@drawable/ic_list_music"
        android:title="@string/MenuDaftarRekaman"/>

    <item
        android:id="@+id/menuUtamaFragment"
        android:icon="@drawable/ic_mic"
        android:title="@string/MenuUtama"/>
    <item
        android:id="@+id/notifikasiFragment"
        android:icon="@drawable/ic_notifications_active"
        android:title="@string/MenuNotifikasi"/>

    <item
        android:id="@+id/akunFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/MenuAkun"/>
</menu>