<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.menuUtama.MenuUtamaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ic_mic"
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:layout_marginTop="104dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_mic"
            android:tint="@color/colorSkyBlue1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/MenuUtama"
            android:textAllCaps="true"
            android:textColor="@color/colorSkyBlue1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading1_home"
            android:textColor="@color/colorSkyBlue1"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_mic" />

        <TextView
            android:id="@+id/tv_heading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heading2_home"
            android:textAlignment="center"
            android:textColor="@color/colorSkyBlue1"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_heading"
            app:layout_constraintStart_toStartOf="@+id/tv_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mulairekamhome"
            style="@style/Platform.MaterialComponents"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_btnmulairekamhome"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorSkyBlue1"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>